--- a/MeasureMyPike.Web/App/MeasureMyPike/src/index.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/index.html
@@ -1,5 +1,8 @@
 ﻿<!--- index.html -->
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"><!doctype html>
+<!doctype html>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Oswald|PT+Sans|Roboto|Titillium+Web" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <html lang="en">
 <head>
   <meta charset="utf-8">
